# skillslike

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_GUIDE.md  IMAGE_GEN_GUIDE.md  Makefile  PRODUCTION_DEPLOYMENT.md  README.md  SUMMARY.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_api_direct.py  test_image_gen.py  vercel.json  verify_image_gen.py
api/: index.py
docs/: AGENTS.md  ARCHITECTURE_VISUAL.md  FIX_SUMMARY.md  QUICKSTART.md  architecture.md  usage-guide.md
docs/examples/: custom-skill-tutorial.md
examples/: api_client.py  basic_usage.py
skills/: nano-banana-image-gen.yaml  quickstart.md
skills/examples/: excel-analyzer.yaml  knowledge-reorganizer.yaml  web-search.yaml
skillslike/: __init__.py  config.py
skillslike/agent/: __init__.py  core.py  state.py
skillslike/api/: __init__.py  main.py  schemas.py
skillslike/executors/: __init__.py  anthropic_executor.py  base.py  custom_executor.py  image_gen_executor.py  schemas.py
skillslike/models/: __init__.py  manifest.py
skillslike/registry/: __init__.py  loader.py  registry.py
skillslike/router/: __init__.py  intent_router.py
skillslike/storage/: __init__.py  file_store.py
static/: README.md  index.html
static/js/: app.js
tests/: __init__.py
tests/unit_tests/: __init__.py  test_api_direct.py  test_file_store.py  test_image_gen.py  test_image_gen_fixed.py  test_loader.py  test_manifest.py  test_router.py
